syntax = "proto3";

option go_package = "proto/proto_object";

package proto_object;

message AvgGroup {
    map<uint32, bool> data = 1;
}